# cloud-optimizer-env

./: Dockerfile  README.md  app.py  environment.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.cfg  tasks.py  test_env.py  trigger.txt
server/: app.py
