[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-optimizer-env"
version = "0.1.0"
description = "OpenEnv RL environment"
requires-python = ">=3.9"

dependencies = []

[tool.setuptools]
py-modules = ["inference", "environment", "graders", "tasks", "app"]